[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vincent Son", email = "107471539+szw0407@users.noreply.github.com"},
]
dependencies = [
    "httpx>=0.25.2",
    "beautifulsoup4>=4.12.2",
    "pyexecjs>=1.5.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL"}

