[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vincent Son", email = "107471539+szw0407@users.noreply.github.com"},
]
dependencies = [
    "httpx>=0.25.2",
    "beautifulsoup4>=4.12.2",
    "sqlmodel>=0.0.14",
    "pandas>=2.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-v3"}

[tool.pdm]
